<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <ImageView
        android:id="@+id/ProviderSymbol"
        android:layout_width="166dp"
        android:layout_height="159dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/userNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/doctor_icon" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="Phone number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailAddressInput"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="E-mail Address"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="username"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="continue"
        android:background="@drawable/button_icon"
         />

    <Button
        android:id="@+id/backButton"
        android:text="back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_icon"
       />
</android.support.constraint.ConstraintLayout>