...
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    tools:context=".Activities.publicActitivy.MainActivity">

    <Button
        android:id="@+id/ProviderSignUp"
        android:text="Provider Sign up"
        android:layout_width="0dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/patientLogin"
        android:background="@drawable/patient_login"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
...
